static/css/_app_deersky.scss
//	Lupinia Studios Main Theme - "Showcase"
//	App-Specific SASS Stylesheet - New Tab Page
//	By Natasha L.
//	www.lupinia.net | github.com/lupinia

/*	App:  New Tab Page	*/
body.newtab_page {
	background-size: cover;
}

#newtab {
	width:100%;
	height:100%;
	min-height:100%;
	margin-left:auto;
	margin-right:auto;
	position:relative;
	z-index:0;
	
	#center_info {
		display: flex;
		align-items: center;
		justify-content: center;
		height: 100%;
		
		.center_time_wrapper { position:relative; }
		
		&.timer_active {
			@media #{$scr_short} {
				.center_time_wrapper { bottom: 60px; }
			}
			.timestamp.timer { display: block !important; }
			button#timer_open img { opacity: 100% !important; }
		}
	}
	
	&.has_timer {
		transition: background-color 1s ease-in-out;
		
		&.timer_complete { background-color: $color_timer_end_bg; }
	}
	
	.timestamp {
		border:none;
		text-shadow: 0px 0px 5px #000000;
		background-color: $color_bgtrans_subtle;
		
		legend {
			padding-top: 20px;
			margin-bottom: -10px;
			color: $color_maintext;
		}
		
		div { text-align: center; }
		
		button {
			background: none;
			border: none;
			height: 20px;
			width: 20px;
			margin: 5px;
			padding: 2px;
			border-radius: 4px;
			
			&:hover, &:focus { background-color: $color_bg_hover; }
			&:active { background-color: $color_bgtrans_solid; }
			&.disabled {
				cursor: not-allowed;
				opacity: 50%;
				background-color: none !important;
			}
			
			&#timer_open img { opacity: 50%; }
			&#timer_open:hover img, &#timer_open:focus img, &#timer_open:active img { opacity: 100%; }
			
			img#timer_startstop_pause_icon { display:none; }
			img#timer_startstop_play_icon { display:inline-block; }
			&.timer_status_running {
				img#timer_startstop_pause_icon { display:inline-block; }
				img#timer_startstop_play_icon { display:none; }
			}
		}
		
		.timestamp_time, .timer_time {
			font-size: 24pt;
			font-weight: bold;
		}
		
		.timestamp_date {
			font-size: 8pt;
			font-weight: bold;
		}
		
		&.timer {
			display:none;
			position:absolute;
			width:100%;
			box-shadow: 0px 6px 3px -3px $color_shadow inset;
			background-color: rgba(59,49,107,0.5);
			
			.timer_time {
				font-size:70pt;
				color: #aa90cc;
				transition: color 0.1s linear;
				&.timer_running { color: $color_breadcrumbs; }
				&.timer_complete { color: $color_timer_end_text; }
			}
			
			.timer_buttons {
				position: absolute;
				top: 0px;
				height: 100%;
				width: 30px;
				display: flex;
				align-items: center;
				align-content: center;
				justify-items: center;
				flex-wrap: wrap;
				
				&#timer_buttons_left { left:0px; }
				&#timer_buttons_right { right:0px; }
			}
			
			.timer_label {
				position: absolute;
				top: 2px;
				font-variant: small-caps;
				font-size: small;
				text-align: center;
				width: 100%;
			}
		}
		
		&#timestamp_main {
			position: relative;
			margin:0px !important;
			
			.timestamp_date { font-size: 25pt; }
			.timestamp_time {
				font-size: 100pt;
				text-shadow: 0px 0px 10px #000000;
				margin-left: 10px;
				margin-right: 10px;
			}
			
			button#timer_open {
				display: block;
				position: absolute;
				bottom: 0px;
				right: 0px;
			}
		}
	}
	
	#footer {
		width: 100%;
		height: 120px;
		min-width: 100%;
		overflow: hidden;
		display: flex;
		justify-content: space-evenly;
		align-items: flex-end;
		bottom:0;
		position:fixed;
		
		.timestamp {
			float: left;
			height: auto;
			margin: 10px !important;
			opacity: 50%;
			
			&:hover, &:active, &:focus { opacity: 100%; }
			
			// Corresponds to the value of settings.HOMEPAGE_MAX_EXTRA_CLOCKS
			&#extraclock3 {
				@media screen and (max-width: 500px) { display: none; }
			}
			&#extraclock4 {
				@media screen and (max-width: 600px) { display: none; }
			}
			&#extraclock5 { @media screen and (max-width: 750px) { display: none; } }
			&#extraclock6 { @media screen and (max-width: 900px) { display: none; } }
			&#extraclock7 { @media screen and (max-width: 1050px) { display: none; } }
			&#extraclock8 { @media screen and (max-width: 1200px) { display: none; } }
			&#extraclock9 { @media screen and (max-width: 1350px) { display: none; } }
			&#extraclock10 { @media screen and (max-width: 1500px) { display: none; } }
			&#extraclock11 { @media screen and (max-width: 1650px) { display: none; } }
			&#extraclock12 { @media screen and (max-width: 1800px) { display: none; } }
		}
		}
	}
	
	#topright {
		position:fixed;
		top:0;
		right:0;
		padding:5px;
		border:none;
		text-shadow: 0px 0px 5px #000000;
		background-color: $color_bgtrans_subtle;
		color: $color_breadcrumbs;
		font-size: 8pt;
		opacity: 50%;
		
		&:hover, &:active, &:focus { opacity: 100%; }
		
		img {
			vertical-align: middle;
			padding-bottom: 2px;
			width: 12px;
			height: 12px;
			
			&#icon_photo_credit { margin-right:1px; }
		}
	}
}

/*	=====	*/

